--- a/render.yaml
+++ b/render.yaml
@@ -31,7 +31,7 @@ services:
         sync: false
 
   # Frontend Static Site
-  - type: static
+  - type: web
     name: dealdrop-frontend
     env: static
     region: oregon
